--- a/Kaiserreich Korean Translation/localisation/KR_Burma_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Burma_l_english.yml
@@ -5,20 +5,20 @@ BUR_totalist_party:0 "버마 공산당"
 BUR_totalist_party_long:0 "버마 공산당"
 BUR_radical_socialist_party:0 "버마 농민과 노동자 인민당"
 BUR_radical_socialist_party_long:0 "버마 농민과 노동자 인민당"
-BUR_syndicalist_party:0 "Burma Syndicalist Party"
-BUR_syndicalist_party_long:0 "Burma Syndicalist Party"
-BUR_social_democrat_party:0 "Sinyetha"
-BUR_social_democrat_party_long:0 "Sinyetha(Poor Man's Party)"
+BUR_syndicalist_party:0 "버마 생디칼리스트당"
+BUR_syndicalist_party_long:0 "버마 생디칼리스트당"
+BUR_social_democrat_party:0 "빈민당"
+BUR_social_democrat_party_long:0 "빈민당"
 BUR_social_liberal_party:0 "Dobama Asiayone"
 BUR_social_liberal_party_long:0 "Dobama Asiayone(We Burmans Association)"
 BUR_market_liberal_party:0 "BDP"
-BUR_market_liberal_party_long:0 "Burma Democratic Party"
+BUR_market_liberal_party_long:0 "버마 민주당"
 BUR_social_conservative_party:0 "Ngawbinwsaing"
 BUR_social_conservative_party_long:0 "Ngawbinwsaing(Five Flowers Alliance)"
 BUR_authoritarian_democrat_party:0 "Privy Council"
 BUR_authoritarian_democrat_party_long:0 "Privy Council of Burma"
-BUR_paternal_autocrat_party:0 "National United Front"
-BUR_paternal_autocrat_party_long:0 "National United Front"
+BUR_paternal_autocrat_party:0 "국가연합 전선"
+BUR_paternal_autocrat_party_long:0 "국가연합 전선"
 BUR_national_populist_party:0 "Union Solidarity and Development Party"
 BUR_national_populist_party_long:0 "Union Solidarity and Development Party"
 
