--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -150,14 +150,14 @@ orenda_engines:0 "Orenda Engines"
 raac_canada:0 "Royal Atlantic Aeronautics"
 
 ### Combined Syndicates of America ###
-kr_us_steel:0 "US Steel"
+kr_us_steel:0 "US 철강"
 kr_att:0 "AT&T"
 bfgoodrich:0 "BFGoodrich"
 auto_ordnance_corporation:0 "Auto-Ordnance Corporation"
 harrington_richardson:0 "Harrington & Richardson"
-rock_island_arsenal:0 "Rock Island Arsenal"
+rock_island_arsenal:0 "록 아일랜드 아스널"
 american_bantam:0 "American Bantam"
-kr_dodge:0 "Dodge"
+kr_dodge:0 ""
 baldwin_locomotive_works:0 "Baldwin Locomotive Works"
 fisher_tank_arsenal:0 "Fisher Tank Arsenal"
 brewster:0 "Brewster"
@@ -331,13 +331,13 @@ cantiere_ansaldo:0 "Cantiere Ansaldo"
 oto:0 "OTO"
 
 ### Japan ###
-Nippon_Electric_Company:0 "Nippon Electric Company"
+Nippon_Electric_Company:0 "일본 전자 회사"
 Ishikawajima_Heavy_Industries:0 "Ishikawajima Heavy Industries"
 Mitsui_Zaibatsu:0 "Mitsui Zaibatsu"
 Furukawa_Siemens:0 "Furukawa Siemens"
 Nihon_Musen:0 "Nihon Musen"
-Nippon_Oil:0 "Nippon Oil"
-kawasaki:0 "Kawasaki"
+Nippon_Oil:0 "일본 석유회사"
+kawasaki:0 "카와사키"
 sumitomo:0 "Sumitomo"
 tokyo_shibaura_denki:0 "Tokyo Shibaura Denki"
 nichitsu:0 "Nichitsu"
@@ -345,17 +345,17 @@ kokura_arsenal:0 "Kokura Arsenal"
 nagoya_arsenal:0 "Nagoya Arsenal"
 osaka_army_arsenal:0 "Osaka Army Arsenal"
 isuzu:0 "Isuzu"
-toyota:0 "Toyota"
-hitachi:0 "Hitachi"
-nissan:0 "Nissan"
-tokyo_gas:0 "Tokyo Gas & Electric"
-mitsubishi:0 "Mitsubishi"
-kyushu_hikoki:0 "Kyushu Hikoki"
+toyota:0 "도요타"
+hitachi:0 "히타치"
+nissan:0 "닛산"
+tokyo_gas:0 "도코 가스 & 전기"
+mitsubishi:0 "미츠비시"
+kyushu_hikoki:0 "규슈 히코키"
 aichi:0 "Aichi"
-tachikawa:0 "Tachikawa"
-nakajima:0 "Nakajima"
-yokosuka:0 "Yokosuka"
-kawanishi:0 "Kawanishi"
+tachikawa:0 "타치카와"
+nakajima:0 "나카지마"
+yokosuka:0 "요코수카"
+kawanishi:0 "카와니시"
 yokosuka_naval_arsenal:0 "Yokosuka Naval Arsenal"
 kure_naval_arsenal:0 "Kure Naval Arsenal"
 sasebo_naval_arsenal:0 "Sasebo Naval Arsenal"
