브라질오류수정

--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -809,12 +809,12 @@ BOT_national_populist_DEF:0 "츠나와 보호령"
 BRA_totalist:0 "전체주의 브라질"
 BRA_totalist_ADJ:0 "브라질"
 BRA_totalist_DEF:0 "전체주의 브라질"
-BRA_syndicalist:0 "브라질 코뮌 연합국"
+BRA_syndicalist:0 "브라질 코뮌 연합"
 BRA_syndicalist_ADJ:0 "브라질"
-BRA_syndicalist_DEF:0 "브라질 코뮌 연합국"
-BRA_radical_socialist:0 "브라질 코뮌 연합국
+BRA_syndicalist_DEF:0 "브라질 코뮌 연합"
+BRA_radical_socialist:0 "브라질 코뮌 연합"
 BRA_radical_socialist_ADJ:0 "브라질"
-BRA_radical_socialist_DEF:0 "브라질 코뮌 연합국"
+BRA_radical_socialist_DEF:0 "브라질 코뮌 연합"
 BRA_social_democrat:0 "브라질"
 BRA_social_democrat_ADJ:0 "브라질"
 BRA_social_democrat_DEF:0 "브라질"
