--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -522,7 +522,7 @@ worldnews.120.e:0 "아프리카 인민들은 제국 주의로부터 자유로워
 worldnews.250.t:0 "-"
 
 worldnews.251.t:0 "런던 함락"
-worldnews.251.d:0 "런던에서의 보고에 따르면, 템즈 강을 가로 지르는 기나긴 전투 이후 독일군의 진격에 영국의 수도가 점령되었습니다. 연합군은 가능한 한 오랫동안 독일 군대를 지연시키려고 노력했고 거센 저항을 했지만 결국 패배했습니다. \n\n정복자 윌리엄 이후 처음으로 런던은 외세의 손에 떨어졌습니다. 런던의 분위기는 무겁고, 연합군이 떠난 가운데 잔존한 저항군과 독일군 경찰이 거리에서 싸우면서 여전히 거리에는 총소리가 들리고 있습니다."
+worldnews.251.d:0 "런던에서의 보고에 따르면, 템즈 강을 가로 지르는 기나긴 전투 이후 [new_controller.GetAdjective]군의 진격에 영국의 수도가 점령되었습니다. 연합군은 가능한 한 오랫동안 [new_controller.GetAdjective]군을 지연시키려고 노력했고 거센 저항을 했지만 결국 패배했습니다. \n\n정복자 윌리엄 이후 처음으로 런던은 외세의 손에 떨어졌습니다. 런던의 분위기는 무겁고, 연합군이 떠난 가운데 잔존한 저항군과 [new_controller.GetAdjective] 헌병대가 거리에서 교전을 벌이면서 여전히 거리에는 총소리가 들리고 있습니다."
 worldnews.251.a:0 "이건 일시적인 후퇴일 뿐이다!"
 worldnews.251.b:0 "이것은 종말의 시작이다."
 worldnews.251.c:0 "런던이 [new_controller.GetAdjective] 수중에 있다면, [old_controller.GetAdjective]의 패배는 불가피하겠군"
@@ -750,11 +750,11 @@ worldnews.280.b:0 "마침내 바르샤바가 우리 것이다!"
 worldnews.280.c:0 "그렇군..."
 
 worldnews.281.t:0 "시드니 함락"
-worldnews.281.d.siam:0 "Further expanding on its conquests in the south, [new_controller.GetNameDef] has seized Sydney in Australasia. Local defenders were forced to retreat across the Sydney Harbour Bridge to new positions on Observatory Hill, but attempts to demolish the bridge were thwarted by advancing [new_controller.GetAdjective] forces.\n\nThe [new_controller.GetAdjective] war flag can now be seen hanging from the Sydney Town Hall, which serves as the headquarters of the city's new military administration, and the Sarawat Taharn military police are maintaining a watchful eye on the streets."
+worldnews.281.d.siam:0 "남방 정복의 범위가 더욱 넓어지면서, [new_controller.GetNameDef]은 오스트랄라시아의 시드니를 점령했습니다. 현지의 수비대는 하버 브릿지를 가로질러 옵저버토리 힐까지 후퇴했으며, 다리를 무너뜨리려는 시도마저 진격하는 [new_controller.GetAdjective] 군대에 의해 좌절되고 말았습니다.\n\n이제 [new_controller.GetAdjective]의 군기가 시드니의 새 군정 사령부 역할을 하는 시드니 시청에 걸려 있는 것을 볼 수 있고 사라와트 타한 헌병대는 거리를 경계하며 감시하고 있습니다."
 worldnews.281.d.other:0 "When the foothills outside the Blue Mountains were lost to the invading [new_controller.GetAdjective] army, it was only a matter of time before the city fell. Through a series of controlled engagements, [old_controller.GetAdjective] forces pulled back slowly, and by yesterday made it to the docks, but with the capture of the Sydney Harbour Bridge (which the defenders didn't destroy due to its significance to the people of the capital) their commander has negotiated a ceasefire.\n\nOrginally a city of released British inmates, Sydney is experiencing bitter irony as the city itself is now a prison. Even worse, military experts predict this could be the beginning of the end of [old_controller.GetNameDef], as the loss of such a vital city is a tough blow to bear."
-worldnews.281.a:0 "우리는 빠르게 시드니를 수복할 것이다"
-worldnews.281.b:0 "마침내 시드니가 우리의 것이 됬군!"
-worldnews.281.c:0 "[old_controller.GetAdjective]의 상황이 심각해 보이는군"
+worldnews.281.a:0 "우리는 곧바로 시드니를 수복할 것이다"
+worldnews.281.b:0 "마침내 시드니가 우리 것이다!"
+worldnews.281.c:0 "[old_controller.GetAdjective]의 상황은 심각해 보인다"
 
 worldnews.282.t:0 "멕시코 시티 함락"
 worldnews.282.d:0 "Mexico city, the oldest capital in North America and the 5th-largest by population, fell today to invading [new_controller.GetAdjective] forces. They encircled the city and then moved into the lake bed from the west, cutting the major transportation arteries through the lower areas and forcing [old_controller.GetAdjective] defenders to bleed off into the foothills to the east. As of today, the general in charge of the [new_controller.GetAdjective] occupation was sighted entering the National Palace to negotiate with the governor for a ceasefire.\n\nRumours claim [new_controller.GetAdjective] troops are touring the old Aztec ruins and picking up 'free' souvenirs for themselves, and now it looks like the survivors of Spanish tyranny will learn to live under the yoke of [new_controller.GetNameDef] control."
