--- a/Kaiserreich Korean Translation/localisation/KR_Allgemeine_Ostasiatische_Gesellschaft_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Allgemeine_Ostasiatische_Gesellschaft_l_english.yml
@@ -65,10 +65,10 @@ allgost.8.t:0 "AOG의 비독일화"
 allgost.8.d:0 "As we have give more and more influence to the Chinese Governors and elites, there has been more and more of a push to put more power into their hands."
 allgost.8.a:0 "Claim some independence and reorganise"
 allgost.8.b:0 "공화국을 수립하라."
-allgost.8.c:0 "We belong to the Qing Empire"
-allgost.9.t:0 "The AOG is joining the Empire"
-allgost.9.d:0 "The AOG is returning to it's Chinese roots and has decided to rejoin the Empire!"
-allgost.9.a:0 "This is a great day for China!"
+allgost.8.c:0 "우리는 청 제국에 속한다"
+allgost.9.t:0 "AOG가 제국에 합류하다"
+allgost.9.d:0 "AOG는 그 기원인 중국을 따라 제국에 다시 합류하기로 결정했다!"
+allgost.9.a:0 "중국에겐 최고로 좋은 날이군!"
 allgost.10.t:0 "공화국 수립"
 allgost.10.d:0 "The AOG will be reorganised into a free republic under guidance of the Chinese democrats."
 allgost.10.a:0 "공화국을 수립하라!"
