--- a/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
@@ -29,11 +29,11 @@ JAP_paternal_autocrat_party_long:0 "국민 동맹"
 JAP_national_populist_party_long:0 "동방회"
 
 ### Leader Descriptions ###
-POLITICS_HIROHITO_DESC:0 "Emperor Hirohito's short reign has, as of yet, been a period of relative stability and economic recovery for Japan. With anarchist insurrectionism defeated, and Japan's neighbors appearing increasingly weak, Hirohito stands poised to lead Japan into an era of unprecedented hegemony in Asia, and perhaps even further abroad."
+POLITICS_HIROHITO_DESC:0 "히로히토 천황의 단기간의 통치 기간은 아직까지 일본에게 상대적으로 안정되고 경제적으로 회복된 시기였습니다. 무정부주의자들의 반란이 실패하고 일본의 이웃 국가들이 점점 더 약해지는 것처럼 보이는 가운데, 히로히토는 일본을 아시아에서는 전례 없는 패권의 시대로 더 멀리 나아가게 할 것입니다."
 
 ### Ideas ###
 JAP_narrow_rail:0 "Kyōki Railways"
-JAP_narrow_rail_desc:0 "Japan's railways were built using an unusually narrow gauge inherited from the British Empire during the Meiji Era. While it does make construction easier in Japan's mountainous terrain, its speed limitations have negatively impacted our industry. Experts argue over whether conversion is worth the government's time."
+JAP_narrow_rail_desc:0 "일본의 철도는 메이지 시대 동안 대영 제국으로부터 전승된 이례적으로 좁은 궤간을 사용하여 건설되었습니다. 일본의 산악 지역에서의 건설은 쉬웠지만 그 속도 제한은 우리 산업에 부정적인 영향을 미쳤습니다. 전문가들은 전환이 정부의 시간을 할애할 가치가 있는지에 대해 논하고 있습니다."
 japan_NSA_act:0 "국가보안법"
 JAP_COL_PREP:0 "식민화를 준비하라"
 niigata_riots:0 "니가타 민란"
@@ -130,7 +130,7 @@ colonise_start:0 "§GWe will begin preparations for our colonisation efforts.§!
 small_rail:0 "§RSwitching rail gauges will be a long and difficult process.§!\n"
 
 ### Focuses - Political - Base ###
-JAP_NSA_focus:0 "The National Security Act"
+JAP_NSA_focus:0 "국가 보안법"
 JAP_NSA_focus_desc:0 "A debate in the Diet regarding the national security act has been raging for the past few weeks, and it is time for us to decide which course our nation will take. Some conservative members of the Diet fear that if the act isn't passed, radical elements in society will try to seize power. The future of Japan is in our hands."
 JAP_democratic_path:0 "민주주의를 사수하라!"
 JAP_democratic_path_desc:0 "After receiving the offer from the scheming army officers, General Hayashi Senjuro has rejected to back their coup attempt, citing his responsibility to the established regime. While not actively opposing the putschists, it is unlikely they can win without the support of the central command."
@@ -138,9 +138,9 @@ JAP_imperialist_path:0 "가장 길었던 날"
 JAP_imperialist_path_desc:0 "General Hayashi Senjuro has agreed to support the scheming army officers in their coup attempt. With support from the army minister, it seems like their attempt will be successful..."
 
 ### Focuses - Political - Democratic ###
-JAP_elec_reform:0 "Electorate Reform"
-JAP_elec_reform_desc:0 "After extensive review of our voting system it was discovered various loopholes and oversights allows significant amounts of voter fraud in general elections. By introducing a reform package to the electorate, we can hopefully limit this phenomenon."
-JAP_fem_reform:0 "Enact Women's Suffrage"
+JAP_elec_reform:0 "선거 개혁"
+JAP_elec_reform_desc:0 "우리의 투표 제도에 대한 광범위한 검토 후에 그것이 여러가지 허점을 발견했으며 일반 선거에서 상당한 양의 투표 사기가 허용되는 것으로 드러났습니다. 우리가 유권자들에게 개혁 정책을 도입함으로써, 이 현상을 제한할 수 있기를 바랍니다."
+JAP_fem_reform:0 "여성 참정권 부여"
 JAP_fem_reform_desc:0 "While feminist activity started in Japan back in the 19th century they have only recently managed to achieve any progress by overthrowing the 'Police Security Act' in 1921. Recently more liberal minded members of the Diet have been pushing to finally grant women full political rights as part of Japan's growing democratic traditions."
 JAP_DEM_SCI:0 "학문적 다원론"
 JAP_DEM_SCI_desc:0 "Pluralism is a central part of any democracy. By encouraging Pluralism in our academic institutions, we can improve our research and education!"
@@ -155,16 +155,16 @@ JAP_chuou_desc:0 "The Emperor has refused to support the government, and a now a
 #JAP_chuou_desc:0 "Faced with a possible coup from the Ishinha faction, the centralist leaders began approaching the Imperial Court, hoping to gain his favour. Without Imperial support, the coup will most likely fail."
 JAP_chuou_start:0 "정치적 청사진"
 JAP_chuou_start_desc:0 "After our assumption of power we were expected to draw out a national political plan reflecting our militarist ideology. In the following weeks, the supreme military council will be meeting to discuss such a document."
-JAP_chuou_fund:0 "Fund Adjustment Ordinance"
-JAP_chuou_fund_desc:0 "The Fund Adjustment Ordinance is the first of a series of 'National Defence Ordinances' decrees by the Centralist regime. The state-owned Bank of Japan is now empowered to regulate capital investments, establishment of companies, and the subscription or underwriting of securities. This will allow the Government to control and allocate funds to war industries."
+JAP_chuou_fund:0 "기금 조정 조례"
+JAP_chuou_fund_desc:0 "기금 조정 조례는 중앙 집권 제도에 의한 일련의 '국가 방위 조례'의 첫번째 법령입니다. 일본의 국영 은행은 이제 자본 투자, 기업의 설립, 증권의 인수나 매수를 통제할 수 있는 권한을 갖고 있습니다. 이것은 정부가 전쟁 산업에 자금을 통제하고 할당하는 것을 허용할 것입니다."
 JAP_chuou_mob:0 "국가총동원법"
 JAP_chuou_mob_desc:0 "The National Total Mobilisation Ordinance is designed to provide the Government a means to control and mobilise all the resources and manpower available in the Empire. During war-time we will have full control over the labour supply, production of goods, financial institutions, industrial and labour organisations, prices, and the press."
 JAP_chuou_cons:0 "군사 훈련 교육"
 JAP_chuou_cons_desc:0 "Military training was first introduced into the compulsory physical education curriculum in 1925 by the Tanaka regime as a way to subdue growing anti-militarist influence and discontent among students. It was discontinued with the Constitutional Restoration of 1926 but it is time to reverse that decision."
 JAP_chuou_draft:0 "국민징용령"
 JAP_chuou_draft_desc:0 "The National Service Draft Ordinance is a supplement to the earlier National Total Mobilisation Ordinance, particularly its Article 4, which had enabled the Government to mobilise the labour force. The new Ordinance authorises the Government to conscript workers for war industries."
-JAP_chuou_last:0 "One Corporate State"
-JAP_chuou_last_desc:0 "The time has finally come to transform Japan into a unified and strong corporate state, where every individual does his part for the good of the Emperor and the Kokutai."
+JAP_chuou_last:0 "단일 기업 국가"
+JAP_chuou_last_desc:0 "마침내 일본을 통합되고 강력한 기업 국가로 바꿀 때가 왔습니다. 여기서는 모든 사람들이 천황과 국가 체제의 이익을 위해 자신의 역할을 합니다."
 
 ### Focuses - Political - Imperial ###
 JAP_ishinha:0 "쇼와 복권"
@@ -175,7 +175,7 @@ JAP_yokuseiha_POL:0 "권력 분할"
 JAP_yokuseiha_POL_desc:0 "While supporting imperial restoration the Yokuseiha members also see the problem with absolute power. Partly to prevent corruption and partly to secure their power they arrange a decentralised system for the Taisei Yokusankai."
 JAP_yokuseiha_ECO:0 "시장 자유"
 JAP_yokuseiha_ECO_desc:0 "Keeping in line with their decentralised approach the Yokuseiha propose an economic plan consisting of minimal state intervention in the economy. While this would allow groups like the Zaibatsu to gain more power this policy will also endear the regime to them."
-JAP_yokuseiha_AGR:0 "Colonial Investments"
+JAP_yokuseiha_AGR:0 "식민지 투자"
 JAP_yokuseiha_AGR_desc:0 "In response to the agricultural crisis Japan faces the Yokuseiha faction proposes a program of settlement incentives in Japanese mainland colonies in China and elsewhere. By increasing agricultural input from abroad homeland economy could shift to other sectors and supply logistics would be improved."
 JAP_kodoha:0 "황도파"
 JAP_kodoha_desc:0 "The Kodoha faction is made up of restorationist army generals and officers who wish to bring Japan back to its folkist roots and create a strong imperial power at the head of the state."
