--- a/Kaiserreich Korean Translation/localisation/KR_Allgemeine_Ostasiatische_Gesellschaft_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Allgemeine_Ostasiatische_Gesellschaft_l_english.yml
@@ -40,15 +40,15 @@ allgost.3.a:0 "과오를 범하는군..."
 allgost.3.b:0 "안 돼! 이런 상황은 안 된다! 전부 인수해!"
 allgost.4.t:0 "반동주의자 개혁"
 allgost.4.d:0 "본사의 전소 이후, 이사회는 국가 재정을 개선하고 남부 및 중부 중국의 민족주의 감정을 통제하기 위해서는 정책의 변화가 필요하다는 것을 깨달았습니다. 베를린 주식 시장 붕괴, 또는 검은 월요일,의 여파가 우리에게 닥치기 시작했고, 우리가 안고 있는 문제점들을 해결하고 이 회사의 미래를 위한 계획을 마련해야 합니다. 이 회의의 결과는..."
-allgost.4.a:0 "We cannot afford to continue 'Iron Rice Bowl' practices"
+allgost.4.a:0 "우리는 '철밥통'을 계속 유지할 수 없다"
 allgost.4.b:0 "Begin to work closer with the Elites and recognise the Native Structure"
 allgost.4.c:0 "Close the Qing operated factories that are draining our profits"
 allgost.4.e:0 "The economy is just in a slump, we can wait it out"
-allgost.5.t:0 "The German Factories"
+allgost.5.t:0 "독일 공장"
 allgost.5.d:0 "The scoundrel Board of Directors of the AOG has decided to close the factories inside our borders to 'maximise their profits.'"
-allgost.5.a:0 "Let them go"
-allgost.5.b:0 "NO! We cannot let this happen! Buy them now!"
-allgost.19.t:0 "The Labour Force of Southern China"
+allgost.5.a:0 "그냥 납둬라"
+allgost.5.b:0 "안 돼! 그럴 수 없어! 전부 인수해!"
+allgost.19.t:0 "중국 남부의 노동력"
 allgost.19.d:0 "After we stopped guaranteeing job security, 'Iron Rice Bowl' jobs as the Chinese call it, to the Chinese people the workers have begun to do more worrying than working. Almost overnight, fully one third of Southern China's workforce was unemployed. A large majority of these people became migratory workers, moving from job to job in great masses. There have been attempts to unionise in the more urbanised areas, and the Unionists were made an example of."
 allgost.19.a:0 "We've made a mistake, re-instate job security"
 allgost.19.b:0 "There is unemployment, but have you seen the profits!?"
@@ -61,44 +61,44 @@ allgost.7.d:0 "The Board Meeting was held today. At the last conference, the dec
 allgost.7.a:0 "Begin to de-Germanise the Face of the AOG"
 allgost.7.b:0 "We have made enough progress with our compromise, we met our goals"
 allgost.7.c:0 "Abandon the reforms, we're getting in too deep!"
-allgost.8.t:0 "AOG의 비독일화"
+allgost.8.t:0 "동아시아 회사의 탈독일화"
 allgost.8.d:0 "As we have give more and more influence to the Chinese Governors and elites, there has been more and more of a push to put more power into their hands."
-allgost.8.a:0 "Claim some independence and reorganise"
-allgost.8.b:0 "공화국을 수립하라."
+allgost.8.a:0 "독립을 주장하고 인정을 받아보자"
+allgost.8.b:0 "공화국을 수립해라."
 allgost.8.c:0 "우리는 청 제국에 속한다"
-allgost.9.t:0 "AOG가 제국에 합류하다"
-allgost.9.d:0 "AOG는 그 기원인 중국을 따라 제국에 다시 합류하기로 결정했다!"
+allgost.9.t:0 "동아시아 회사가 제국에 합류하다"
+allgost.9.d:0 "동아시아 회사는 그 기원인 중국을 따라 제국에 다시 합류하기로 결정했다!"
 allgost.9.a:0 "중국에겐 최고로 좋은 날이군!"
 allgost.10.t:0 "공화국 수립"
-allgost.10.d:0 "The AOG will be reorganised into a free republic under guidance of the Chinese democrats."
+allgost.10.d:0 "일반 동아시아 회사는 중국 민주당주도하에 자유 공화국이 수립될 것이다."
 allgost.10.a:0 "공화국을 수립하라!"
-allgost.11.t:0 "AOG declares independence from Berlin!"
+allgost.11.t:0 "일반 동아시아 회사가 독일로부터 독립을 선언하다!"
 allgost.11.d:0 "The efforts of the Board of Directors in the AOG to bring stability to their corporate semi-state by inviting locals into leading positions backfired and the AOG has declared complete independence from the German Empire. Now we must decide what our next move will be!"
-allgost.11.a:0 "Let them be!"
-allgost.11.b:0 "They will be crushed!"
-allgost.12.t:0 "Long live the Republic"
-allgost.12.d:0 "We have established Republican control over the former AOG lands!"
-allgost.12.a:0 "Huzzah!"
-allgost.13.t:0 "The German Empire has been defeated"
+allgost.11.a:0 "그냥 납둬라!"
+allgost.11.b:0 "놈 들을 파괴할 것이다!"
+allgost.12.t:0 "공화국이여 영원하라"
+allgost.12.d:0 "일반 동아시아 회사 영토의 통제권을 공화국이 잡았습니다!"
+allgost.12.a:0 "만세!"
+allgost.13.t:0 "독일제국이 패배하다"
 allgost.13.d:0 "The German Empire, once the leading power of the world, was utterly defeated in Europe. Shock waves created by the German defeat reached even German overseas territory. Defeated Chinese republicans together with the rest of the nation are raising their heads, in hopes that the fall of German Empire will herald the fall of the AOG as well. What shall we do?"
-allgost.13.a:0 "Rejoin the Qing Empire"
-allgost.13.b:0 "Ask Japan for protection"
-allgost.13.c:0 "Ask Russia for protection"
-allgost.13.e:0 "Ask the United States for protection"
-allgost.13.f:0 "Allow the Chinese to rule"
-allgost.13.g:0 "We shall survive this!"
-allgost.14.t:0 "The AOG surrenders before us"
+allgost.13.a:0 "청 제국에 재가맹한다"
+allgost.13.b:0 "일본에게 보호를 요청한다"
+allgost.13.c:0 "러시아에게 보호를 요청한다"
+allgost.13.e:0 "미합중국에게 보호를 요청한다"
+allgost.13.f:0 "중국의 통치를 허용한다"
+allgost.13.g:0 "우린 반드시 살아남는다!"
+allgost.14.t:0 "일반 동아시아 회사가 항복했습니다"
 allgost.14.d:0 "The defeat of the German Empire in Europe sent shock waves throughout the entire German colonial empire and the AOG was no different. In order to protect themselves from the fires of revolution, the board of AOG directors decided to fully rejoin our Empire."
-allgost.14.a:0 "Great!"
-allgost.15.t:0 "The AOG asks us for protection"
+allgost.14.a:0 "좋았어!"
+allgost.15.t:0 "일반 동아시아 회사가 보호를 요청했습니다"
 allgost.15.d:0 "The defeat of the German Empire in Europe sent shock waves throughout the entire German colonial empire and the AOG was no different. In order to protect themselves from the fires of revolution, the board of AOG directors decided to ask our state for protection."
-allgost.15.a:0 "Accept their offer!"
-allgost.15.b:0 "Refuse their alliance, we don't need anyone!"
-allgost.16.t:0 "The AOG asks us for protection"
+allgost.15.a:0 "제안을 받아들여라!"
+allgost.15.b:0 "제안을 거부해라, 우린 그 누구도 필요없다!"
+allgost.16.t:0 "일반 동아시아 회사가 보호를 요청했습니다"
 allgost.16.d:0 "The defeat of the German Empire in Europe sent shock waves throughout the entire German colonial empire and the AOG was no different. In order to protect themselves from the fires of revolution, the board of AOG directors decided to ask our state for protection."
-allgost.16.a:0 "Accept their offer!"
-allgost.16.b:0 "Refuse their alliance, we don't need anyone!"
-allgost.17.t:0 "The AOG asks us for protection"
+allgost.16.a:0 "제안을 받아들여라!"
+allgost.16.b:0 "제안을 거부해라, 우린 그 누구도 필요없다!"
+allgost.17.t:0 "일반 동아시아 회사가 보호를 요청했습니다"
 allgost.17.d:0 "The defeat of the German Empire in Europe send shock waves throughout the entire German colonial empire and the AOG was no different. In order to protect themselves from the fires of revolution, the board of AOG directors decided to ask our state for protection."
-allgost.17.a:0 "Accept their offer!"
-allgost.17.b:0 "Refuse their alliance, we don't need anyone!"
+allgost.17.a:0 "제안을 받아들여라!"
+allgost.17.b:0 "제안을 거부해라, 우린 그 누구도 필요없다!"
