--- a/Kaiserreich Korean Translation/localisation/KR_Sweden_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Sweden_l_english.yml
@@ -19,19 +19,19 @@ SWE_nyland_integration:0 "Nyland integration"
 SWE_vaasa_integration:0 "Vaasa integration"
 
 ### Opinion Modifiers ###
-SWE_the_north_peace_treaty:0 "The Northern Peace Treaty"
-SWE_swedish_revanchism:0 "Swedish Revanchism"
-SWE_befriend_finland:0 "Befriend Finland"
-SWE_swedish_aggression:0 "Swedish Aggression"
-SWE_swedish_trade:0 "Swedish trade"
-SWE_swedish_alliance_negotiations:0 "Swedish Negotiations"
+SWE_the_north_peace_treaty:0 "북방 평화 조약"
+SWE_swedish_revanchism:0 "스웨덴의 보복 정책"
+SWE_befriend_finland:0 "핀란드와의 친선"
+SWE_swedish_aggression:0 "스웨덴의 침략"
+SWE_swedish_trade:0 "스웨덴의 무역"
+SWE_swedish_alliance_negotiations:0 "스웨덴의 협상"
 
 ### Ideas ###
-SWE_nordic_council:0 "Nordic Council"
-SWE_common_mil_purchases:0 "Defence Acquisition Board"
-SWE_passport_union_idea:0 "Nordic Passport Convention"
-SWE_monetary_union_idea:0 "Scandinavian Monetary Union"
-SWE_custom_union_idea:0 "Nordic Single Market"
+SWE_nordic_council:0 "북유럽 이사회"
+SWE_common_mil_purchases:0 "국방 조달 위원회"
+SWE_passport_union_idea:0 "북유럽 여권 협약"
+SWE_monetary_union_idea:0 "스칸디나비아 화폐 동맹"
+SWE_custom_union_idea:0 "북유럽 단일 시장"
 
 SWE_union_activity:0 "Industrial Sabotage"
 SWE_kompani_linge_idea:0 "Kompani Linge"
@@ -74,11 +74,11 @@ SWE_SENREF_freemedia_desc:0 "The state grip on television and radio broadcasting
 
 ### Old Ideas ###
 
-SWE_landstormen:0 "예비군(Landstormen)"
+SWE_landstormen:0 "예비군"
 SWE_landstormen_desc:0 "Landstormen is made up of elder formerly conscripted men who meet up yearly to have refresher training. With second line type of duties, this allows younger, more eligible men to serve in our proper army."
 SWE_contentious_elections:0 "Contentious election"
 SWE_contentious_elections_desc:0 "This last campaign has been unusually contentious and both sides warn that should the other side win, it will be the end of Sweden. It strains our society greatly and there is word of syndicalist coup plans and military take-overs. God protect Sweden."
-SWE_statare:0 "Statare"
+SWE_statare:0 "고용농"
 SWE_statare_desc:0 "A 'Statare' is a farm-worker with poor legal protection and limited rights, finding themselves paid in kind such such as potatoes and flour rather than money. They are considered the lowliest of Swedish society and while they work hard for basically nothing, there is a growing discontent among their ranks."
 SWE_redrule1:0 "Revolutionary Changes"
 SWE_redrule1_desc:0 "To change people's minds are more difficult than one might think at first."
@@ -131,12 +131,12 @@ SWE_agrarianreform_desc:0 "With our countryside now dominated by well paid profe
 
 SWE_germ_swe_trade:0 "독일-스웨덴 철강 조약"
 SWE_germ_swe_trade_desc:0 "The German-Swedish Steel Treaty assures that Sweden and Germany will remain trading partners for a long time to come. More importantly, German experts was sent to Sweden to help us improve our mining industry, and they are more efficient than they have ever been!"
-SWE_nordic_bloctrade:0 "The Nordic Bloc"
+SWE_nordic_bloctrade:0 "북유럽 연합"
 SWE_nordic_bloctrade_desc:0 "The Nordic Bloc is now considered a single, inner market, without toll limitations and with easy access in between the participating nations. This reform has been rewarding economically, but even more in terms of popularity. Finally, the Fraternal people's are truly on brotherly terms!"
 
-SWE_reformed_statare:0 "고용농(Statare) 개혁"
+SWE_reformed_statare:0 "고용농 개혁"
 SWE_reformed_statarere_desc:0 "With a major overhaul work done with the Statar-situation on the countryside we can finally reap the benefits from our hard labour. Statarna now get paid both in kind and in wages and they are guaranteed the right to decent homes near their work-place and representatives in local administrations."
-SWE_corporate_statare:0 "고용농(Statare) 법인"
+SWE_corporate_statare:0 "고용농 법인"
 SWE_corporate_statare_desc:0 "We have optimised the system with our Statare, making sure they aren't eligible only to farms and countryside companies but also to the state. A strengthened police force keeps dissent at bay as there is still discontent due to lack of proper pay and housing."
 
 SWE_redscare_idea:0 "Swedish Red Scare"
@@ -781,39 +781,39 @@ swe.25.t:0 "Establishment of the Scandinavian Defence Union"
 swe.25.d:0 "We have decided to sign a defensive military alliance together with our partners."
 swe.25.a:0 "Join the Scandinavian Defence Union"
 
-swe.26.t:0 "The Nordic Passport Convention"
+swe.26.t:0 "북유럽 여권 협약"
 swe.26.d:0 "-"
-swe.26.a:0 "Sign the Convention"
+swe.26.a:0 "협약에 서명"
 
 swe.27.t:0 "Reestablishment of the Scandinavian Monetary Union"
 swe.27.d:0 "-"
 swe.27.a:0 "A new currency union for a new era!"
 
-swe.28.t:0 "A Nordic Single Market"
+swe.28.t:0 "북유럽 단일 시장"
 swe.28.d:0 "-"
-swe.28.a:0 "Join the Single Market"
+swe.28.a:0 "단일 시장에 참여"
 
 swe.29.t:0 "The Scandinavian Scientist Conference"
 swe.29.d:0 "-"
-swe.29.a:0 "Knowledge is Power"
+swe.29.a:0 "아는 것이 힘이다"
 
-swe.30.t:0 "Norway seeks Scandinavian Federation"
+swe.30.t:0 "노르웨이가 스칸디나비아 연방 결성을 요청하다"
 swe.30.d:0 "-"
-swe.30.a:0 "Agree to Federate (Game over)"
-swe.30.b:0 "Oppose Federation"
+swe.30.a:0 "연방에 찬성 (게임 종료)"
+swe.30.b:0 "연방에 반대"
 
-swe.31.t:0 "Denmark seeks Scandinavian Federation"
+swe.31.t:0 "덴마크가 스칸디나비아 연방 결성을 요청하다"
 swe.31.d:0 "-"
-swe.31.a:0 "Agree to Federate (Game over)"
-swe.31.b:0 "Oppose Federation"
+swe.31.a:0 "연방에 찬성 (게임 종료)"
+swe.31.b:0 "연방에 반대"
 
-swe.32.t:0 "Creation of the Nordic Federation"
+swe.32.t:0 "북유럽 연방 결성"
 swe.32.d:0 "-"
-swe.32.a:0 "Great!"
+swe.32.a:0 "좋았어!"
 
-swe.33.t:0 "Scandinavian Federation Fail"
+swe.33.t:0 "스칸디나비아 연방 결성의 실패"
 swe.33.d:0 "Our attempts at creating a Nordic Federation have failed... It seems that Nordic Integration have reached it peak."
-swe.33.a:0 "Damn you, stupid Scandinavians!"
+swe.33.a:0 "멍청한 스칸디나비아 개자식들!"
 
 swe.200.t:0 "The Norwegian Question"
 swe.200.d:0 "After our successful conquest of Norway, we must now decide what to do with the country. What shall our policy towards our western neighbours be?"
